--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,4 +32,4 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: ./vendor/bin/pest
+      run: ./vendor/bin/pest test/Feature
