--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,8 +28,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
+    - name: Execute tests with Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: ./vendor/bin/pest test/Feature
+      run: ./vendor/bin/pest tests/Feature
