--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,19 +17,19 @@ jobs:
         php-version: '8.2.8'
     - uses: actions/checkout@v3
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('.env') || copy('.env.github', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Run migrations
-      run: php artisan migrate
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Run migrations
+      run: php artisan migrate
     - name: Execute tests with Pest
       env:
         DB_CONNECTION: sqlite
